[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/playing_scene/playing_scene.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/ShipporiAntique-Medium.otf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/replay/replay_scene.gd" type="Script" id=4]

[sub_resource type="Gradient" id=17]
offsets = PoolRealArray( 0, 0.5, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.752941, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=20]
gradient = SubResource( 17 )
fill_to = Vector2( 0, 1 )

[sub_resource type="Gradient" id=19]
offsets = PoolRealArray( 0, 0.5, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.752941, 1, 1, 1, 1 )

[sub_resource type="GradientTexture2D" id=21]
gradient = SubResource( 19 )
fill_to = Vector2( 0, 1 )

[sub_resource type="DynamicFont" id=22]
size = 80
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=23]
size = 140
outline_size = 5
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=24]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=25]

[node name="ReplayScene" type="Node"]
script = ExtResource( 4 )

[node name="PlayingScene" parent="." instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="Panel" type="Panel" parent="CanvasLayer"]
margin_left = 1136.0
margin_top = 64.0
margin_right = 1280.0
margin_bottom = 256.0

[node name="HSliderSpeed" type="HSlider" parent="CanvasLayer/Panel"]
unique_name_in_owner = true
margin_left = 8.0
margin_top = 104.0
margin_right = 136.0
margin_bottom = 128.0
min_value = 0.5
max_value = 3.0
step = 0.25
value = 1.0
tick_count = 6
ticks_on_borders = true

[node name="Button" type="Button" parent="CanvasLayer/Panel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 128.0
margin_bottom = 48.0
toggle_mode = true
text = "Pause"

[node name="Panel" type="CanvasLayer" parent="."]
layer = 10

[node name="ResultOverlap" type="Control" parent="Panel"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="RivalVeil" type="TextureRect" parent="Panel/ResultOverlap"]
anchor_right = 1.0
margin_bottom = 192.0
mouse_filter = 2
texture = SubResource( 20 )
expand = true

[node name="MyVeil" type="TextureRect" parent="Panel/ResultOverlap"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -192.0
mouse_filter = 2
texture = SubResource( 21 )
expand = true

[node name="ReturnButton" type="Button" parent="Panel/ResultOverlap"]
margin_left = 384.0
margin_top = 576.0
margin_right = 896.0
margin_bottom = 701.0
custom_fonts/font = SubResource( 22 )
text = "Return"

[node name="ResultLabel" type="Label" parent="Panel/ResultOverlap"]
margin_left = 256.0
margin_top = 32.0
margin_right = 1024.0
margin_bottom = 240.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 23 )
text = "Win"
align = 1
valign = 1

[node name="Panel" type="Panel" parent="Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 24 )

[node name="ButtonBack" type="Button" parent="Panel/Panel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 208.0
margin_bottom = 64.0
text = "BACK"

[node name="ButtonStart" type="Button" parent="Panel/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 416.0
margin_top = 248.0
margin_right = 608.0
margin_bottom = 328.0
text = "START"

[node name="BannerContainer" type="ScrollContainer" parent="Panel/Panel"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -392.0
margin_top = 64.0
margin_right = 392.0
margin_bottom = -32.0
rect_min_size = Vector2( 720, 624 )
custom_styles/bg = SubResource( 25 )
follow_focus = true

[node name="Container" type="VBoxContainer" parent="Panel/Panel/BannerContainer"]
unique_name_in_owner = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="ended" from="PlayingScene" to="." method="_on_PlayingScene_ended"]
[connection signal="value_changed" from="CanvasLayer/Panel/HSliderSpeed" to="." method="_on_HSliderSpeed_value_changed"]
[connection signal="pressed" from="Panel/ResultOverlap/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="Panel/Panel/ButtonBack" to="." method="_on_ButtonBack_pressed"]
[connection signal="pressed" from="Panel/Panel/ButtonStart" to="." method="_on_ButtonStart_pressed"]
